[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devroid"
version = "0.1.0"
description = "A utility library for Pycord bots with colored console outputs and Discord embed colors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Florian"}
]
keywords = ["discord", "pycord", "bot", "utility", "colors", "console"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "py-cord>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Nowaroid-Studios/devroid"
"Bug Tracker" = "https://github.com/Nowaroid-Studios/devroid/issues"
